--- a/html/PBWLO/PBWLO020003.html
+++ b/html/PBWLO/PBWLO020003.html
@@ -59,11 +59,6 @@
 	<script src="../../resources/js/ui-script.js"></script>
 	<script src="../../resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
-	<style>
-		main {
-			background-color: var(--background-bg_lightGray);
-		}
-	</style>
 </head>
 
 <body>
@@ -81,6 +76,11 @@
 				<!-- content -->
 				<div class="content">
 
+					<style>
+						main {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
 					<!-- division-center -->
 					<div class="division-center">
 
@@ -182,7 +182,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-privacy">동의</button>
+				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-privacy">확인</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
