--- a/html/PBWLO/PBWLO01002_01.html
+++ b/html/PBWLO/PBWLO01002_01.html
@@ -112,7 +112,8 @@
 									</div>
 
 									<div class="btn-wrap my24">
-										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth"></i><span>생체인증 로그인</span></button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i><span>생체인증 로그인</span></button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i><span>생체인증 로그인</span></button>
 									</div>
 
 									<div class="btn-wrap p0">
