--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -99,7 +99,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="text" placeholder="이름, 회사명으로 검색해 보세요." title="검색">
+								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." title="검색">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
@@ -347,7 +347,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" title="이름">
+										<input type="search" title="이름" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -364,7 +364,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" title="회사">
+										<input type="search" title="회사" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -380,8 +380,9 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="label"></div>
-									<div class="input-wrap">
+									<div class="input-wrap input-btn">
 										<input type="tel" title="휴대폰 번호" placeholder="‘-’ 없이 숫자만 입력">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -398,7 +399,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" title="부서">
+										<input type="search" title="부서" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -414,8 +415,9 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="직책">
+									<div class="input-wrap input-btn">
+										<input type="tel" title="직책" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -431,8 +433,9 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="email" title="이메일">
+									<div class="input-wrap input-btn">
+										<input type="email" title="이메일" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -448,8 +451,9 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="전화번호">
+									<div class="input-wrap input-btn">
+										<input type="tel" title="전화번호" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -465,8 +469,9 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="팩스번호">
+									<div class="input-wrap input-btn">
+										<input type="tel" title="팩스번호" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -483,7 +488,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" title="주소">
+										<input type="search" title="주소">
 									</div>
 									<p class="validate-text"></p>
 								</div>
