--- a/html/PBWBU/PBWBU010001_noresult.html
+++ b/html/PBWBU/PBWBU010001_noresult.html
@@ -99,7 +99,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="text" placeholder="이름, 회사명으로 검색해 보세요." title="검색">
+								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." title="검색">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
