--- a/html/PBWMA/PBWMA000000_result.html
+++ b/html/PBWMA/PBWMA000000_result.html
@@ -102,7 +102,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="text" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
+										<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
 										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -168,7 +168,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="text" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
+								<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
@@ -268,248 +268,6 @@
 	</div>
 	<!-- //micromodal -->
 
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard-customer-modify" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">고객 명함 관리</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-
-					<div class="content">
-
-						<!-- group -->
-						<div class="group-form mt16">
-							<div class="group-title">
-								<strong class="title-medium">고객 명함 이미지</strong>
-							</div>
-							<div class="group-content mt8">
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<div class="upload-type-select">
-										<button type="button" class="upload-gallery">갤러리</button>
-										<button type="button" class="upload-camera" onclick="swalFire()">카메라</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<picture>
-										<source srcset="../../resources/images/@temp/@business_card.png">
-										<img src="../../resources/images/@temp/@business_card.png" alt="">
-									</picture>
-									<div class="picture-dimmed">
-										<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<picture>
-										<source srcset="../../resources/@temp/thumb_h.png">
-										<img src="../../resources/@temp/thumb_h.png" alt="">
-									</picture>
-									<div class="picture-dimmed">
-										<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-							</div>
-						</div>
-						<!-- //group -->
-
-
-
-						<!-- group -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">키맨</strong>
-								<div class="inp inp-toggle">
-									<label>
-										<input type="checkbox" aria-label="키맨">
-									</label>
-								</div>
-							</div>
-						</div>
-						<!-- //group -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">이름 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="text" title="이름">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">회사 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="text" title="회사">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">휴대폰 번호 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="휴대폰 번호" placeholder="‘-’ 없이 숫자만 입력">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">부서 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="text" title="부서">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">직책</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="직책">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">이메일</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="email" title="이메일">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">전화번호</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="전화번호">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">팩스번호</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="tel" title="팩스번호">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">주소</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="text" title="주소">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<p class="description error body-small mt40">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-
-					</div>
-
-				</div>
-				<div class="modal__footer">
-					<!-- bottom-btn -->
-					<div class="bottom-btn">
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close>저장</button>
-						</div>
-					</div>
-					<!-- //bottom-btn -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
 
 </body>
 
