--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -416,7 +416,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="tel" title="직책" placeholder="">
+										<input type="search" title="직책" placeholder="">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
