--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -353,7 +353,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="text" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
+								<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." title="검색">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
