--- a/html/index.html
+++ b/html/index.html
@@ -592,48 +592,11 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>다시 시도</td>
+						<td>검색결과</td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_02</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td>통합 로그인</td>
-						<td>1단계</td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_03</a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA000000_result</a></td>
 						<td></td>
 					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>2단계</td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_04</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td>서비스 이용 동의</td>
-						<td></td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWLO010003</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>완료</td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWLO020003</a></td>
-						<td></td>
-					</tr>
-
 				</tbody>
 
 
