--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -140,7 +140,7 @@
 									<span>2024.11.26</span>
 								</div>
 								<div class="thumb thumb-nodata">
-									<!-- <button type="button" class="btn-small btn-black btn-round">연장하기</button> -->
+									<!-- <button type="button" class="btn-xsmall btn-black btn-round">연장하기</button> -->
 									<picture>
 										<source srcset="../../resources/images/PBWBU/ico_business_card_empty.svg">
 										<img src="../../resources/images/PBWBU/ico_business_card_empty.svg" alt="">
@@ -165,7 +165,7 @@
 									<div class="tags tags-small tags-lightBlue">D-30</div>
 								</div>
 								<div class="thumb">
-									<button type="button" class="btn-small btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
+									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
 									<picture>
 										<source srcset="../../resources/@temp/thumb_w.png">
 										<img src="../../resources/@temp/thumb_w.png" alt="">
@@ -189,7 +189,7 @@
 									<div class="tags tags-small tags-lightRed">삭제예정</div>
 								</div>
 								<div class="thumb">
-									<button type="button" class="btn-small btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
+									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
 									<picture>
 										<source srcset="../../resources/@temp/thumb_w.png">
 										<img src="../../resources/@temp/thumb_w.png" alt="">
