--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -223,14 +223,14 @@
 					<!-- //memo-list -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
 					</div>
 
 					<!-- nodata-wrap -->
 					<div class="nodata-wrap mt8 py32">
 						<p class="description caution body-large ac">등록된 메모가 없습니다.</p>
 						<div class="btn-wrap pb0">
-							<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-memo-write"><i class="ico-memo"></i>메모 등록</button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo-write"><i class="ico-memo"></i>메모 등록</button>
 						</div>
 					</div>
 					<!-- //nodata-wrap -->
@@ -286,7 +286,7 @@
 										<div class="group gap8 py0 j-start flex-wrap">
 											<div>2024-11-22</div>
 											<div class="tags tags-small tags-lightRed">삭제예정</div>
-											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
 										</div>
 									</div>
 								</div>
@@ -296,7 +296,7 @@
 										<div class="group gap8 py0 j-start flex-wrap">
 											<div>2024-11-22</div>
 											<div class="tags tags-small tags-lightBlue">D-30</div>
-											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
 										</div>
 									</div>
 								</div>
@@ -499,7 +499,7 @@
 							<div class="textarea-length">
 								<div class="left">0/300자</div>
 								<div class="right">
-									<button type="button" class="btn-small btn-primary btn-round">저장</button>
+									<button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
 								</div>
 							</div>
 						</div>
