--- a/html/PBWBU/PBWBU020001_share.html
+++ b/html/PBWBU/PBWBU020001_share.html
@@ -224,14 +224,14 @@
 					<!-- //memo-list -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-small btn-outlined btn-round">전체보기</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round">전체보기</button>
 					</div>
 
 					<!-- nodata-wrap -->
 					<div class="nodata-wrap mt8 py32">
 						<p class="description caution body-large ac">등록된 메모가 없습니다.</p>
 						<div class="btn-wrap pb0">
-							<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
 						</div>
 					</div>
 					<!-- //nodata-wrap -->
@@ -255,7 +255,7 @@
 									<div class="info-td">
 										<div class="group gap12 py0 j-start flex-wrap">
 											<div class="body-medium fw-700 fc-status-active">VG공유중</div>
-											<button type="button" class="btn-small btn-outlined btn-round">공유 해제</button>
+											<button type="button" class="btn-xsmall btn-outlined btn-round">공유 해제</button>
 										</div>
 									</div>
 								</div>
@@ -328,7 +328,7 @@
 										<div class="group gap8 py0 j-start flex-wrap">
 											<div>2024-11-22</div>
 											<div class="tags tags-small tags-lightRed">삭제예정</div>
-											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
 										</div>
 									</div>
 								</div>
@@ -338,7 +338,7 @@
 										<div class="group gap8 py0 j-start flex-wrap">
 											<div>2024-11-22</div>
 											<div class="tags tags-small tags-lightBlue">D-30</div>
-											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
 										</div>
 									</div>
 								</div>
