--- a/html/PBWLO/PBWLO01002_04.html
+++ b/html/PBWLO/PBWLO01002_04.html
@@ -116,7 +116,7 @@
 									</div>
 
 									<div class="btn-wrap my24">
-										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
 									</div>
 
 									<div class="btn-wrap py0">
