--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -76,7 +76,7 @@
 					<h1>펀드 찾기 </h1>
 				</div>
 				<div class="right">
-					<button type="button" class="header-btn" aria-label="관심 펀드 추가"><i class="i-favorite"></i></button>
+					<button type="button" class="header-btn" aria-label="관심 펀드"><i class="i-favorite"></i></button>
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
 				</div>
 			</div>
@@ -123,31 +123,31 @@
 						<div class="group-content content-fluid px0 mt14">
 							<ul class="d-flex overflow-list px16">
 								<li>
-									<div class="btn-small btn-outlined btn-round">
+									<div class="btn-xsmall btn-outlined btn-round">
 										<button class="btn-inner">반도체</button>
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
 								</li>
 								<li>
-									<div class="btn-small btn-outlined btn-round">
+									<div class="btn-xsmall btn-outlined btn-round">
 										<button class="btn-inner">배당</button>
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
 								</li>
 								<li>
-									<div class="btn-small btn-outlined btn-round">
+									<div class="btn-xsmall btn-outlined btn-round">
 										<button class="btn-inner">레버리지</button>
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
 								</li>
 								<li>
-									<div class="btn-small btn-outlined btn-round">
+									<div class="btn-xsmall btn-outlined btn-round">
 										<button class="btn-inner">키워드</button>
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
 								</li>
 								<li>
-									<div class="btn-small btn-outlined btn-round">
+									<div class="btn-xsmall btn-outlined btn-round">
 										<button class="btn-inner">키워드</button>
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
