--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -94,7 +94,7 @@
 					<!-- group -->
 					<div class="group content-fluid">
 						<div class="right">
-							<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 						</div>
 					</div>
 					<!-- //group -->
