--- a/html/PBWLO/PBWLO01002_01.html
+++ b/html/PBWLO/PBWLO01002_01.html
@@ -112,12 +112,12 @@
 									</div>
 
 									<div class="btn-wrap my24">
-										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i><span>생체인증 로그인</span></button>
-										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i><span>생체인증 로그인</span></button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 로그인</button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 로그인</button>
 									</div>
 
 									<div class="btn-wrap p0">
-										<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
+										<button type="button" class="btn-xsmall btn-outlined btn-round">RM 로그인</button>
 									</div>
 
 
