--- a/html/PBWLO/PBWLO01002_02.html
+++ b/html/PBWLO/PBWLO01002_02.html
@@ -104,7 +104,7 @@
 									</div>
 
 									<div class="btn-wrap py24">
-										<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-refresh"></i><span>다시 시도</span></button>
+										<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-refresh"></i>다시 시도</button>
 									</div>
 
 									<div class="btn-wrap p0">
