--- a/html/PBWLO/PBWLO01002_03.html
+++ b/html/PBWLO/PBWLO01002_03.html
@@ -108,11 +108,11 @@
 									</div>
 
 									<div class="btn-wrap my24">
-										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
+										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
 									</div>
 
 									<div class="btn-wrap py0">
-										<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
+										<button type="button" class="btn-xsmall btn-outlined btn-round">RM 로그인</button>
 									</div>
 
 								</div>
