--- a/html/PBWMA/PBWMA000000_result.html
+++ b/html/PBWMA/PBWMA000000_result.html
@@ -76,7 +76,7 @@
 					<h1>펀드 찾기 </h1>
 				</div>
 				<div class="right">
-					<button type="button" class="header-btn" aria-label="관심 펀드 추가"><i class="i-favorite"></i></button>
+					<button type="button" class="header-btn" aria-label="관심 펀드"><i class="i-favorite"></i></button>
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
 				</div>
 			</div>
