--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -121,7 +121,7 @@
 							</div>
 							<div class="divide-list mt16 px4">
 								<span>부서명</span>
-								<div class="division h12 mx8"></div>
+								<div class="division h14 mx8"></div>
 								<span>직책</span>
 							</div>
 						</div>
@@ -191,7 +191,7 @@
 							</dl>
 							<div class="divide-list">
 								<span>부서명</span>
-								<div class="division h12 mx8"></div>
+								<div class="division h14 mx8"></div>
 								<span>부서명</span>
 							</div>
 						</div>
@@ -215,7 +215,7 @@
 							</dl>
 							<div class="divide-list">
 								<span>부서명</span>
-								<div class="division h12 mx8"></div>
+								<div class="division h14 mx8"></div>
 								<span>부서명</span>
 							</div>
 						</div>
@@ -256,7 +256,7 @@
 										나우리
 										<div class="divide-list mt4">
 											<span>부서명</span>
-											<div class="division h12 mx8"></div>
+											<div class="division h14 mx8"></div>
 											<span>직책</span>
 										</div>
 									</div>
@@ -271,7 +271,7 @@
 										나은행
 										<div class="divide-list mt4">
 											<span>부서명</span>
-											<div class="division h12 mx8"></div>
+											<div class="division h14 mx8"></div>
 											<span>직책</span>
 										</div>
 									</div>
@@ -410,14 +410,14 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
-					<div class="content" style="padding-bottom:96px;">
+					<div class="content">
 
 						<div class="memo-user-info">
 							<strong class="title-medium px4">나고객</strong>
 							<div class="group pt0 j-start gap8">
 								<div class="divide-list px4">
 									<span>부서명</span>
-									<div class="division h12 mx8"></div>
+									<div class="division h14 mx8"></div>
 									<span>직책</span>
 								</div>
 								<div class="body-medium fw-400">회사명</div>
@@ -440,7 +440,7 @@
 								</dl>
 								<div class="divide-list">
 									<span>부서명</span>
-									<div class="division h12 mx8"></div>
+									<div class="division h14 mx8"></div>
 									<span>부서명</span>
 								</div>
 							</div>
@@ -458,7 +458,7 @@
 								</dl>
 								<div class="divide-list">
 									<span>부서명</span>
-									<div class="division h12 mx8"></div>
+									<div class="division h14 mx8"></div>
 									<span>부서명</span>
 								</div>
 							</div>
@@ -483,7 +483,7 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
-					<div class="content py16">
+					<div class="content pt16">
 
 						<div class="inp inp-medium">
 							<label>
@@ -525,7 +525,7 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
-					<div class="content" style="padding-bottom:96px;">
+					<div class="content">
 
 						<div class="change-history">
 							<div class="tags tags-small tags-lightGray">변경</div>
