--- a/html/PBWMA/PBWMA000000_result.html
+++ b/html/PBWMA/PBWMA000000_result.html
@@ -93,6 +93,12 @@
 				<!-- content -->
 				<div class="content">
 
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
+
 					<!-- sticky-content -->
 					<div class="sticky-sentinal"></div>
 					<div class="sticky-content content-fluid">
@@ -114,27 +120,133 @@
 					</div>
 					<!-- //sticky-content -->
 
-					<div class="division-center content-fluid bg-background-bg_lightGray j-start">
-						<div class="fund-result">
-							<strong class="result-title"><span>’888’</span> 건의 검색결과</strong>
+					<div class="fund-result">
+						<strong class="result-title"><span>’888’</span> 건의 검색결과</strong>
 
-							<!-- sort-wrap -->
-							<div class="sort-wrap">
+						<!-- sort-wrap -->
+						<div class="sort-wrap py0 my24">
 
-								<!-- sort-list -->
-								<button class="sort-list mrauto" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
-									<span class="filter">
-										<span>전체</span>
-										<i class="badge ml0">3</i>
-									</span>
-									<span class="division mx8"></span>
-									<span class="sort">최신순</span>
-								</button>
-								<!-- sort-list -->
+							<!-- sort-list -->
+							<button class="sort-list mrauto" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
+								<span class="filter">
+									<span>전체</span>
+									<i class="badge ml0">3</i>
+								</span>
+								<span class="division mx8"></span>
+								<span class="sort">최신순</span>
+							</button>
+							<!-- sort-list -->
+
+						</div>
+						<!-- sort-wrap -->
+
+						<!-- fund-card-list -->
+						<div class="fund-card-list mt24">
+							<div class="fund-card" data-toggle="toggle-wrap">
+								<div class="clip clip-recommend">추천</div>
+								<div class="tag-wrap">
+									<div class="tags tags-small tags-lightRed">#높은위험</div>
+									<div class="tags tags-small tags-lightYellow">#원금손실가능</div>
+								</div>
+								<a href="#" class="fund-title headline-small">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</a>
+								<div class="divide-list">
+									<span class="divide01">글로벌</span>
+									<div class="division h14 mx8"></div>
+									<span class="divide02">수수료선취 · 온라인</span>
+								</div>
+								<dl class="expect-list">
+									<div class="list">
+										<dt>1개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+									<div class="list rise">
+										<dt>3개월</dt>
+										<dd>+888.88%</dd>
+									</div>
+									<div class="list">
+										<dt>6개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+									<div class="list">
+										<dt>12개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+								</dl>
+								<dl class="expect-reason">
+									<dt>추천사유</dt>
+									<dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
+								</dl>
+								<div class="compare-btn-wrap">
+									<button type="button" class="btn-small btn-secondary btn-round" data-toggle="toggle-trigger" data-switch-before="btn-secondary" data-switch-after="btn-primary">
+										비교담기
+										<i class="ico-compare" data-switch-inner="true" data-switch-inner-before="ico-compare" data-switch-inner-after="ico-check"></i>
+										<span class="toggle-off blind">선택</span>
+										<span class="toggle-on blind">선택해제</span>
+									</button>
+								</div>
+								<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
+									<button type="button" data-toggle="toggle-trigger">
+										<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+										<span class="toggle-off blind">관심펀드 등록</span>
+										<span class="toggle-on blind">관심펀드 등록해제</span>
+									</button>
+								</div>
 
 							</div>
-							<!-- sort-wrap -->
+							<div class="fund-card" data-toggle="toggle-wrap">
+								<div class="clip clip-recommend">추천</div>
+								<div class="tag-wrap">
+									<div class="tags tags-small tags-lightRed">#높은위험</div>
+									<div class="tags tags-small tags-lightYellow">#원금손실가능</div>
+								</div>
+								<a href="#" class="fund-title headline-small">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</a>
+								<div class="divide-list">
+									<span class="divide01">글로벌</span>
+									<div class="division h14 mx8"></div>
+									<span class="divide02">수수료선취 · 온라인</span>
+								</div>
+								<dl class="expect-list">
+									<div class="list">
+										<dt>1개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+									<div class="list rise">
+										<dt>3개월</dt>
+										<dd>+888.88%</dd>
+									</div>
+									<div class="list">
+										<dt>6개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+									<div class="list">
+										<dt>12개월</dt>
+										<dd>-888.88%</dd>
+									</div>
+								</dl>
+								<dl class="expect-reason">
+									<dt>추천사유</dt>
+									<dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
+								</dl>
+								<div class="compare-btn-wrap">
+									<button type="button" class="btn-small btn-secondary btn-round" data-toggle="toggle-trigger" data-switch-before="btn-secondary" data-switch-after="btn-primary">
+										비교담기
+										<i class="ico-compare" data-switch-inner="true" data-switch-inner-before="ico-compare" data-switch-inner-after="ico-check"></i>
+										<span class="toggle-off blind">선택</span>
+										<span class="toggle-on blind">선택해제</span>
+									</button>
+								</div>
+								<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
+									<button type="button" data-toggle="toggle-trigger" id="success">
+										<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+										<span class="toggle-off blind">관심펀드 등록</span>
+										<span class="toggle-on blind">관심펀드 등록해제</span>
+									</button>
+								</div>
+
+							</div>
 						</div>
+						<!-- //fund-card-list -->
+
 					</div>
 
 
@@ -147,6 +259,21 @@
 		</div>
 		<!-- //content end -->
 		<!-- //main-inner -->
+
+		<!-- bottom-btn -->
+		<div class="bottom-btn">
+			<div class="bottom-btn-title">
+				<strong class="title-medium">2개의 펀드를 담아 비교하세요.</strong>
+			</div>
+			<div class="btn-wrap btn-nowrap">
+				<button type="button" class="btn-xsmall btn-primary btn-round"><span>피델리티글로벌배당인컴증권</span><i class="ico-close-16"></i></button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round">비교할 펀드 추가</button>
+			</div>
+			<div class="btn-wrap">
+				<button type="button" class="btn-large btn-primary">비교하기</button>
+			</div>
+		</div>
+		<!-- //bottom-btn -->
 
 
 
@@ -268,7 +395,97 @@
 	</div>
 	<!-- //micromodal -->
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-select-filter">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content">
 
+
+
+						<!-- group-form -->
+						<div class="group-form">
+							<div class="group-title py16 px8">
+								<strong class="title-large px0">정렬</strong>
+							</div>
+							<div class="group-content mt0">
+								<div class="inp inp-tab">
+									<input type="radio" aria-label="수익률순">
+									<input type="radio" aria-label="판매순">
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt16">
+							<div class="group-title py16 px8">
+								<strong class="title-large px0">개월수</strong>
+							</div>
+							<div class="group-content mt0">
+								<div class="inp inp-tab">
+									<input type="radio" aria-label="1개월">
+									<input type="radio" aria-label="3개월">
+									<input type="radio" aria-label="3개월">
+									<input type="radio" aria-label="12개월">
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt16">
+							<div class="group-title py16 px8">
+								<strong class="title-large px0">필터</strong>
+							</div>
+							<div class="group-content mt0">
+								<div class="inp inp-tab">
+									<input type="radio" aria-label="전체">
+									<input type="radio" aria-label="추천펀드">
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+					</div>
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>조회</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<script>
+		$('#success').click(function(event) {
+			if ($(this).closest('.favorite-btn-wrap').hasClass('is-toggled')) {
+				toastr.caution(`<div class="btn-toast-wrap"><a href="#" class="btn-xsmall btn-ghost-white">바로가기<i class="ico-chevron"></i></a>`, '관심펀드에서 삭제되었습니다.', {
+					"extendedTimeOut": 0,
+					"preventDuplicates": true,
+					"disableTimeOut": true,
+				});
+			} else {
+				toastr.success(`<div class="btn-toast-wrap"><a href="#" class="btn-xsmall btn-ghost-white">바로가기<i class="ico-chevron"></i></a>`, '관심펀드에 등록되었습니다', {
+					"extendedTimeOut": 0,
+					"preventDuplicates": true,
+					"disableTimeOut": true,
+				});
+			}
+		});
+	</script>
 </body>
 
 </html>
