--- a/html/index.html
+++ b/html/index.html
@@ -578,14 +578,14 @@
 						<td></td>
 					</tr>
 				</tbody>
-				<tbody data-folder="PBWMA">
+				<tbody data-folder="PBWFU">
 					<tr>
-						<td>PBWMA</td>
+						<td>PBWFU</td>
 						<td>BEST 펀드</td>
 						<td>펀드 찾기</td>
 						<td></td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWMA000000</a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU000000</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -594,9 +594,19 @@
 						<td></td>
 						<td>검색결과</td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWMA000000_result</a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU000000_result</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>펀드 상세</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU040000</a></td>
+						<td></td>
+					</tr>
+                    
 				</tbody>
 
 
