--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -9,9 +9,6 @@
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
 
 	<!-- [plugins] -->
-	<!-- dropzone -->
-	<link rel="stylesheet" href="../../resources/plugins/dropzone/5.9.3/dropzone.min.css">
-	<script src="../../resources/plugins/dropzone/5.9.3/dropzone.min.js"></script>
 	<!-- highlight -->
 	<link rel="stylesheet" href="../../resources/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
 	<script src="../../resources/plugins/highlight.js/11.9.0/highlight.min.js"></script>
@@ -47,6 +44,9 @@
 	<script src="../../resources/plugins/jquery-ui/jquery-ui.min.js"></script>
 	<!-- pinch-zoom -->
 	<script src="../../resources/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
+	<!-- apexcharts -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
+	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
