--- a/html/plugins/highlight.html
+++ b/html/plugins/highlight.html
@@ -11,9 +11,6 @@ sv
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
 
 	<!-- [plugins] -->
-	<!-- dropzone -->
-	<link rel="stylesheet" href="../../resources/plugins/dropzone/5.9.3/dropzone.min.css">
-	<script src="../../resources/plugins/dropzone/5.9.3/dropzone.min.js"></script>
 	<!-- highlight -->
 	<link rel="stylesheet" href="../../resources/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
 	<script src="../../resources/plugins/highlight.js/11.9.0/highlight.min.js"></script>
@@ -44,6 +41,9 @@ sv
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../resources/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- apexcharts -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
+	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
