--- a/html/PBWFU/PBWFU000000_result.html
+++ b/html/PBWFU/PBWFU000000_result.html
@@ -414,9 +414,19 @@
 								<strong class="title-large px0">정렬</strong>
 							</div>
 							<div class="group-content mt0">
-								<div class="inp inp-tab">
-									<input type="radio" aria-label="수익률순">
-									<input type="radio" aria-label="판매순">
+								<div class="inp-group">
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">수익률순</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">판매순</span>
+										</label>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -428,11 +438,31 @@
 								<strong class="title-large px0">개월수</strong>
 							</div>
 							<div class="group-content mt0">
-								<div class="inp inp-tab">
-									<input type="radio" aria-label="1개월">
-									<input type="radio" aria-label="3개월">
-									<input type="radio" aria-label="3개월">
-									<input type="radio" aria-label="12개월">
+								<div class="inp-group">
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">1개월</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">3개월</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">3개월</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad001">
+											<span class="label-title">12개월</span>
+										</label>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -444,9 +474,20 @@
 								<strong class="title-large px0">필터</strong>
 							</div>
 							<div class="group-content mt0">
-								<div class="inp inp-tab">
-									<input type="radio" aria-label="전체">
-									<input type="radio" aria-label="추천펀드">
+
+								<div class="inp-group">
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad003">
+											<span class="label-title">전체</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad003">
+											<span class="label-title">추천펀드</span>
+										</label>
+									</div>
 								</div>
 							</div>
 						</div>
